# controllers/usuarios.js
@@ -58,7 +58,7 @@ function actualizar(req, res) {
 function eliminar(req, res) {
     var usuarioId = req.params.id;
 
-    usuarios.find({ 'usuario': usuarioId}).remove((err) => {
+    usuarios.find({ 'usuario': usuarioId }).remove((err) => {
         if (err) return res.status(500).send({ message: 'error al dejar de eliminar' });
         return res.status(200).send({ message: 'el uuario se ha eliminado' });
     });
@@ -88,9 +88,23 @@ function obtener(req, res) {
 
 }
 
+function obtenerUsuarioByID(req, res) {
+
+    var userId = req.params.id;
+    usuarios.findById(userId, (err, user) => {
+        if (err) return res.status(500).send({ message: 'error en la peticion' });
+        if (!user) return res.status(404).send({ message: 'el usuario no existe' });
+
+
+
+    });
+}
+
+
 module.exports = {
     agregar,
     actualizar,
     obtener,
-    eliminar
+    eliminar,
+    obtenerUsuarioByID
 }
